<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
  <class>ParseFile</class>
  <widget class="QDialog" name="ParseFile">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>620</width>
      <height>200</height>
     </rect>
    </property>
    <property name="windowTitle">
      <string>Parse File</string>
    </property>
    <widget class="QWidget" name="centralWidget">
      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
          <layout class="QHBoxLayout" name="horizontalLayout1">
            <item>
              <widget class="QLabel" name="label_FolderFile">
                <property name="text">
                  <string>Folder/File</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
            <item>
              <widget class="QLineEdit" name="edit_FolderFile">
               <property name="minimumWidth">
                <number>400</number>
               </property>
               <property name="maximumWidth">
                <number>400</number>
               </property>
             </widget>
            </item>
            <item>
              <widget class="QPushButton" name="button_Browse">
                <property name="text">
                  <string>Browse</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
          </layout>
        </item>

        <item>
          <widget class="QFrame" name="split_line1">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>620</width>
              <height>1</height>
             </rect>
            </property>
            <property name="frameShape">
              <enum>QFrame::HLine</enum>
            </property>
            <property name="FrameShadow">
              <enum>QFrame::Plain</enum>
            </property>
          </widget>
        </item>

        <item>
          <layout class="QHBoxLayout" name="horizontalLayout3">
            <item>
             <widget class="QRadioButton" name="radioFile">
              <property name="text">
               <string>Parse Whole File</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QRadioButton" name="radioFunction">
              <property name="text">
               <string>Parse Function By Function(Use ctags)</string>
              </property>
             </widget>
            </item>
          </layout>
        </item>

        <item>
          <widget class="QFrame" name="split_line2">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>620</width>
              <height>1</height>
             </rect>
            </property>
            <property name="frameShape">
              <enum>QFrame::HLine</enum>
            </property>
            <property name="FrameShadow">
              <enum>QFrame::Plain</enum>
            </property>
          </widget>
        </item>

        <item>
          <layout class="QHBoxLayout" name="horizontalLayout4">
            <item>
             <widget class="QCheckBox" name="checkWriteBack">
              <property name="text">
                <string>Write back(dangers)</string>
              </property>
             </widget>
            </item>
            <item>
             <widget class="QCheckBox" name="checkBracket">
              <property name="text">
                <string>Use '{}'</string>
              </property>
             </widget>
            </item>
          </layout>
        </item>

        <item>
          <widget class="QFrame" name="split_line3">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
              <width>620</width>
              <height>1</height>
             </rect>
            </property>
            <property name="frameShape">
              <enum>QFrame::HLine</enum>
            </property>
            <property name="FrameShadow">
              <enum>QFrame::Plain</enum>
            </property>
          </widget>
        </item>

        <item>
          <layout class="QHBoxLayout" name="horizontalLayout1">
            <item>
              <widget class="QPushButton" name="button_OK">
                <property name="text">
                  <string>OK</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
            <item>
              <widget class="QPushButton" name="button_Cancel">
                <property name="text">
                  <string>Cancel</string>
                </property>
                <property name="minimumWidth">
                 <number>100</number>
                </property>
                <property name="maximumWidth">
                 <number>100</number>
                </property>
              </widget>
            </item>
          </layout>
        </item>
      </layout>
    </widget>
  </widget>
  <resources/>
  <connections/>
</ui>
